nv10/cmd/pico/y.output

state 0
	$accept : .comm $end 
	pcom : .    (8)

	A  shift 7
	WINDOW  shift 21
	DEF  shift 23
	DEL  shift 8
	RUN  shift 3
	F  shift 9
	H  shift 11
	Q  shift 6
	R  shift 5
	SET  shift 19
	SETF  shift 20
	GET  shift 10
	W  shift 22
	COLOR  shift 17
	NOCOLOR  shift 16
	FASTER  shift 12
	SLOWER  shift 13
	HELP  shift 18
	SEETREE  shift 14
	OPTIM  shift 15
	.  reduce 8 (src line 76)

	defpr  goto 4
	comm  goto 1
	pcom  goto 2

state 1
	$accept :  comm.$end 

	$end  accept
	.  error


state 2
	comm :  pcom.; 

	;  shift 24
	.  error


state 3
	comm :  RUN.SPEC 
	glob : .    (55)

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	RETURN  shift 36
	OPEN  shift 38
	GLOBAL  shift 52
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	IF  shift 43
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	sstmnt  goto 26
	pprog  goto 28
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 27
	iarray  goto 48
	lval  goto 39
	array  goto 58
	SPEC  goto 25
	decls  goto 30
	glob  goto 40

state 4
	comm :  defpr.YoN SPEC 
	YoN : .    (50)

	;  shift 64
	.  reduce 50 (src line 135)

	YoN  goto 63

state 5
	comm :  R.pathn ; 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	.  error

	ANAME  goto 66
	XYI  goto 73
	pathn  goto 65

state 6
	comm :  Q.; 

	;  shift 78
	.  error


state 7
	pcom :  A.pathn 
	pcom :  A.vval vval vval vval pathn 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	VAL  shift 81
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	-  shift 82
	.  error

	vval  goto 80
	ANAME  goto 66
	XYI  goto 73
	pathn  goto 79

state 8
	pcom :  DEL.pathn 
	pcom :  DEL.array 
	pcom :  DEL.VAL 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	VAL  shift 85
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	OLD  shift 61
	TMP  shift 60
	$  shift 62
	.  error

	array  goto 84
	ANAME  goto 66
	XYI  goto 73
	pathn  goto 83

state 9
	pcom :  F.    (14)

	.  reduce 14 (src line 90)


state 10
	pcom :  GET.    (15)
	pcom :  GET.arname 
	pcom :  GET.pathn 
	pcom :  GET.vval vval vval vval pathn 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	VAL  shift 81
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	OLD  shift 61
	TMP  shift 60
	-  shift 82
	$  shift 62
	.  reduce 15 (src line 91)

	array  goto 89
	vval  goto 88
	arname  goto 86
	ANAME  goto 66
	XYI  goto 73
	pathn  goto 87

state 11
	pcom :  H.hnmlst 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	.  error

	ANAME  goto 66
	XYI  goto 73
	pathn  goto 91
	hnmlst  goto 90

state 12
	pcom :  FASTER.    (20)

	.  reduce 20 (src line 96)


state 13
	pcom :  SLOWER.    (21)

	.  reduce 21 (src line 97)


state 14
	pcom :  SEETREE.    (22)

	.  reduce 22 (src line 98)


state 15
	pcom :  OPTIM.    (23)

	.  reduce 23 (src line 99)


state 16
	pcom :  NOCOLOR.    (24)

	.  reduce 24 (src line 100)


state 17
	pcom :  COLOR.    (25)

	.  reduce 25 (src line 101)


state 18
	pcom :  HELP.    (26)

	.  reduce 26 (src line 104)


state 19
	pcom :  SET.    (27)
	pcom :  SET.ANAME 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	.  reduce 27 (src line 105)

	ANAME  goto 92
	XYI  goto 73

state 20
	pcom :  SETF.    (29)

	.  reduce 29 (src line 107)


state 21
	pcom :  WINDOW.vval vval vval vval 

	VAL  shift 81
	-  shift 82
	.  error

	vval  goto 93

state 22
	pcom :  W.pathn 
	pcom :  W.- pathn 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	-  shift 95
	.  error

	ANAME  goto 66
	XYI  goto 73
	pathn  goto 94

state 23
	defpr :  DEF.NAME ( rglst ) 
	defpr :  DEF.FCT ( rglst ) 

	FCT  shift 97
	NAME  shift 96
	.  error


state 24
	comm :  pcom ;.    (1)

	.  reduce 1 (src line 64)


state 25
	comm :  RUN SPEC.    (2)

	.  reduce 2 (src line 65)


state 26
	SPEC :  sstmnt.    (42)

	.  reduce 42 (src line 125)


state 27
	SPEC :  chann.; 

	;  shift 98
	.  error


state 28
	SPEC :  pprog.; 

	;  shift 99
	.  error


state 29
	sstmnt :  assign.; 

	;  shift 100
	.  error


state 30
	sstmnt :  decls.    (94)

	.  reduce 94 (src line 195)


state 31
	sstmnt :  fcall.; 

	;  shift 101
	.  error


state 32
	sstmnt :  ifpre.stmnt 
	sstmnt :  ifpre.stmnt ELSE YoN stmnt 
	glob : .    (55)

	VARIABLE  shift 109
	AUTO  shift 112
	ARRAY  shift 113
	FCT  shift 110
	BLTN  shift 111
	NAME  shift 108
	STRING  shift 74
	RETURN  shift 36
	OPEN  shift 38
	GLOBAL  shift 52
	X  shift 114
	Y  shift 115
	I  shift 116
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	JUMP  shift 105
	IF  shift 43
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	stmnt  goto 102
	sstmnt  goto 106
	pprog  goto 103
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 107
	iarray  goto 48
	lval  goto 39
	array  goto 58
	ANAME  goto 104
	XYI  goto 73
	decls  goto 30
	glob  goto 40

state 33
	sstmnt :  FOR.( expr ; expr ; expr ) YoN stmnt 

	(  shift 117
	.  error


state 34
	sstmnt :  whpre.stmnt 
	glob : .    (55)

	VARIABLE  shift 109
	AUTO  shift 112
	ARRAY  shift 113
	FCT  shift 110
	BLTN  shift 111
	NAME  shift 108
	STRING  shift 74
	RETURN  shift 36
	OPEN  shift 38
	GLOBAL  shift 52
	X  shift 114
	Y  shift 115
	I  shift 116
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	JUMP  shift 105
	IF  shift 43
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	stmnt  goto 118
	sstmnt  goto 106
	pprog  goto 103
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 107
	iarray  goto 48
	lval  goto 39
	array  goto 58
	ANAME  goto 104
	XYI  goto 73
	decls  goto 30
	glob  goto 40

state 35
	sstmnt :  DO.YoN stmnt WHILE ( expr ) ; 
	YoN : .    (50)

	;  shift 64
	.  reduce 50 (src line 135)

	YoN  goto 119

state 36
	sstmnt :  RETURN.expr ; 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 120
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 37
	chann :  CMAP.ASSIGN expr 
	chann :  CMAP.. RGB ASSIGN expr 
	chann :  CMAP.. RCHAN ASSIGN expr 
	chann :  CMAP.. GCHAN ASSIGN expr 
	chann :  CMAP.. BCHAN ASSIGN expr 

	ASSIGN  shift 132
	.  shift 133
	.  error


state 38
	pprog :  OPEN.pbody YoN CLOSE 
	glob : .    (55)

	VARIABLE  shift 109
	AUTO  shift 112
	ARRAY  shift 113
	FCT  shift 110
	BLTN  shift 111
	NAME  shift 108
	STRING  shift 74
	RETURN  shift 36
	OPEN  shift 38
	GLOBAL  shift 52
	X  shift 114
	Y  shift 115
	I  shift 116
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	JUMP  shift 105
	IF  shift 43
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	stmnt  goto 135
	sstmnt  goto 106
	pprog  goto 103
	pbody  goto 134
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 107
	iarray  goto 48
	lval  goto 39
	array  goto 58
	ANAME  goto 104
	XYI  goto 73
	decls  goto 30
	glob  goto 40

state 39
	assign :  lval.POST 
	assign :  lval.OPER expr 
	assign :  lval.ASSIGN expr 

	ASSIGN  shift 138
	OPER  shift 137
	POST  shift 136
	.  error


state 40
	decls :  glob.INT declst ; 
	decls :  glob.DECL decars ; 

	DECL  shift 140
	INT  shift 139
	.  error


state 41
	fcall :  FCT.aparams 

	(  shift 142
	.  error

	aparams  goto 141

state 42
	fcall :  BLTN.aparams 

	(  shift 142
	.  error

	aparams  goto 143

state 43
	ifpre :  IF.( expr ) YoN 

	(  shift 144
	.  error


state 44
	whpre :  WHILE.( expr ) YoN 

	(  shift 145
	.  error


state 45
	lval :  X.    (131)

	.  reduce 131 (src line 237)


state 46
	lval :  Y.    (132)

	.  reduce 132 (src line 238)


state 47
	lval :  I.    (133)

	.  reduce 133 (src line 239)


state 48
	lval :  iarray.    (134)

	.  reduce 134 (src line 240)


state 49
	lval :  NAME.    (135)

	.  reduce 135 (src line 241)


state 50
	lval :  VARIABLE.    (136)

	.  reduce 136 (src line 242)


state 51
	lval :  AUTO.    (137)

	.  reduce 137 (src line 243)


state 52
	glob :  GLOBAL.    (54)

	.  reduce 54 (src line 141)


state 53
	iarray :  BW.    (102)

	.  reduce 102 (src line 205)


state 54
	iarray :  RGB.    (103)

	.  reduce 103 (src line 206)


state 55
	iarray :  RCHAN.    (104)

	.  reduce 104 (src line 207)


state 56
	iarray :  GCHAN.    (105)

	.  reduce 105 (src line 208)


state 57
	iarray :  BCHAN.    (106)

	.  reduce 106 (src line 209)


state 58
	iarray :  array.    (107)
	iarray :  array.. RGB 
	iarray :  array.. BW 
	iarray :  array.. RCHAN 
	iarray :  array.. GCHAN 
	iarray :  array.. BCHAN 
	iarray :  array.[ elist ] 
	iarray :  array.[ elist ] . RGB 
	iarray :  array.[ elist ] . BW 
	iarray :  array.[ elist ] . RCHAN 
	iarray :  array.[ elist ] . GCHAN 
	iarray :  array.[ elist ] . BCHAN 
	iarray :  array.. RGB [ elist ] 
	iarray :  array.. BW [ elist ] 
	iarray :  array.. RCHAN [ elist ] 
	iarray :  array.. GCHAN [ elist ] 
	iarray :  array.. BCHAN [ elist ] 

	.  shift 146
	[  shift 147
	.  reduce 107 (src line 210)


state 59
	iarray :  ARRAY.[ elist ] 
	iarray :  ARRAY.    (125)

	[  shift 148
	.  reduce 125 (src line 228)


state 60
	array :  TMP.    (174)

	.  reduce 174 (src line 294)


state 61
	array :  OLD.    (175)

	.  reduce 175 (src line 295)


state 62
	array :  $.TMP 
	array :  $.OLD 
	array :  $.VAL 
	array :  $.ANAME 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	VAL  shift 151
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	OLD  shift 150
	TMP  shift 149
	.  error

	ANAME  goto 152
	XYI  goto 73

state 63
	comm :  defpr YoN.SPEC 
	glob : .    (55)

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	RETURN  shift 36
	OPEN  shift 38
	GLOBAL  shift 52
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	IF  shift 43
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	sstmnt  goto 26
	pprog  goto 28
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 27
	iarray  goto 48
	lval  goto 39
	array  goto 58
	SPEC  goto 153
	decls  goto 30
	glob  goto 40

state 64
	YoN :  ;.    (51)

	.  reduce 51 (src line 136)


state 65
	comm :  R pathn.; 

	;  shift 154
	.  error


state 66
	pathn :  ANAME.    (87)

	.  reduce 87 (src line 186)


state 67
	ANAME :  NAME.    (79)

	.  reduce 79 (src line 177)


state 68
	ANAME :  VARIABLE.    (80)

	.  reduce 80 (src line 178)


state 69
	ANAME :  FCT.    (81)

	.  reduce 81 (src line 179)


state 70
	ANAME :  BLTN.    (82)

	.  reduce 82 (src line 180)


state 71
	ANAME :  AUTO.    (83)

	.  reduce 83 (src line 181)


state 72
	ANAME :  ARRAY.    (84)

	.  reduce 84 (src line 182)


state 73
	ANAME :  XYI.    (85)

	.  reduce 85 (src line 183)


state 74
	ANAME :  STRING.    (86)

	.  reduce 86 (src line 184)


state 75
	XYI :  X.    (67)

	.  reduce 67 (src line 159)


state 76
	XYI :  Y.    (68)

	.  reduce 68 (src line 160)


state 77
	XYI :  I.    (69)

	.  reduce 69 (src line 161)


state 78
	comm :  Q ;.    (5)

	.  reduce 5 (src line 71)


state 79
	pcom :  A pathn.    (9)

	.  reduce 9 (src line 77)


state 80
	pcom :  A vval.vval vval vval pathn 

	VAL  shift 81
	-  shift 82
	.  error

	vval  goto 155

state 81
	vval :  VAL.    (140)

	.  reduce 140 (src line 257)


state 82
	vval :  -.VAL 

	VAL  shift 156
	.  error


state 83
	pcom :  DEL pathn.    (11)

	.  reduce 11 (src line 79)


state 84
	pcom :  DEL array.    (12)

	.  reduce 12 (src line 80)


state 85
	pcom :  DEL VAL.    (13)

	.  reduce 13 (src line 85)


state 86
	pcom :  GET arname.    (16)

	.  reduce 16 (src line 92)


state 87
	pcom :  GET pathn.    (17)

	.  reduce 17 (src line 93)


state 88
	pcom :  GET vval.vval vval vval pathn 
	arname :  vval.vval array 
	arname :  vval.vval vval vval array 

	VAL  shift 81
	-  shift 82
	.  error

	vval  goto 157

state 89
	arname :  array.    (33)

	.  reduce 33 (src line 112)


state 90
	pcom :  H hnmlst.    (19)
	hnmlst :  hnmlst.pathn 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	.  reduce 19 (src line 95)

	ANAME  goto 66
	XYI  goto 73
	pathn  goto 158

state 91
	hnmlst :  pathn.    (36)

	.  reduce 36 (src line 116)


state 92
	pcom :  SET ANAME.    (28)

	.  reduce 28 (src line 106)


state 93
	pcom :  WINDOW vval.vval vval vval 

	VAL  shift 81
	-  shift 82
	.  error

	vval  goto 159

state 94
	pcom :  W pathn.    (31)

	.  reduce 31 (src line 109)


state 95
	pcom :  W -.pathn 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	.  error

	ANAME  goto 66
	XYI  goto 73
	pathn  goto 160

state 96
	defpr :  DEF NAME.( rglst ) 

	(  shift 161
	.  error


state 97
	defpr :  DEF FCT.( rglst ) 

	(  shift 162
	.  error


state 98
	SPEC :  chann ;.    (43)

	.  reduce 43 (src line 126)


state 99
	SPEC :  pprog ;.    (44)

	.  reduce 44 (src line 127)


state 100
	sstmnt :  assign ;.    (93)

	.  reduce 93 (src line 194)


state 101
	sstmnt :  fcall ;.    (95)

	.  reduce 95 (src line 196)


102: shift/reduce conflict (shift 163(0), red'n 96(0)) on ELSE
state 102
	sstmnt :  ifpre stmnt.    (96)
	sstmnt :  ifpre stmnt.ELSE YoN stmnt 

	ELSE  shift 163
	.  reduce 96 (src line 197)


state 103
	stmnt :  pprog.; 

	;  shift 164
	.  error


state 104
	stmnt :  ANAME.: stmnt 

	:  shift 165
	.  error


state 105
	stmnt :  JUMP.ANAME ; 

	VARIABLE  shift 68
	AUTO  shift 71
	ARRAY  shift 72
	FCT  shift 69
	BLTN  shift 70
	NAME  shift 67
	STRING  shift 74
	X  shift 75
	Y  shift 76
	I  shift 77
	.  error

	ANAME  goto 166
	XYI  goto 73

state 106
	stmnt :  sstmnt.    (91)

	.  reduce 91 (src line 191)


state 107
	stmnt :  chann.; 

	;  shift 167
	.  error


state 108
	ANAME :  NAME.    (79)
	lval :  NAME.    (135)

	:  reduce 79 (src line 177)
	.  reduce 135 (src line 241)


state 109
	ANAME :  VARIABLE.    (80)
	lval :  VARIABLE.    (136)

	:  reduce 80 (src line 178)
	.  reduce 136 (src line 242)


state 110
	ANAME :  FCT.    (81)
	fcall :  FCT.aparams 

	(  shift 142
	.  reduce 81 (src line 179)

	aparams  goto 141

state 111
	ANAME :  BLTN.    (82)
	fcall :  BLTN.aparams 

	(  shift 142
	.  reduce 82 (src line 180)

	aparams  goto 143

state 112
	ANAME :  AUTO.    (83)
	lval :  AUTO.    (137)

	:  reduce 83 (src line 181)
	.  reduce 137 (src line 243)


state 113
	ANAME :  ARRAY.    (84)
	iarray :  ARRAY.[ elist ] 
	iarray :  ARRAY.    (125)

	:  reduce 84 (src line 182)
	[  shift 148
	.  reduce 125 (src line 228)


state 114
	XYI :  X.    (67)
	lval :  X.    (131)

	:  reduce 67 (src line 159)
	.  reduce 131 (src line 237)


state 115
	XYI :  Y.    (68)
	lval :  Y.    (132)

	:  reduce 68 (src line 160)
	.  reduce 132 (src line 238)


state 116
	XYI :  I.    (69)
	lval :  I.    (133)

	:  reduce 69 (src line 161)
	.  reduce 133 (src line 239)


state 117
	sstmnt :  FOR (.expr ; expr ; expr ) YoN stmnt 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 168
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 118
	sstmnt :  whpre stmnt.    (99)

	.  reduce 99 (src line 201)


state 119
	sstmnt :  DO YoN.stmnt WHILE ( expr ) ; 
	glob : .    (55)

	VARIABLE  shift 109
	AUTO  shift 112
	ARRAY  shift 113
	FCT  shift 110
	BLTN  shift 111
	NAME  shift 108
	STRING  shift 74
	RETURN  shift 36
	OPEN  shift 38
	GLOBAL  shift 52
	X  shift 114
	Y  shift 115
	I  shift 116
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	JUMP  shift 105
	IF  shift 43
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	stmnt  goto 169
	sstmnt  goto 106
	pprog  goto 103
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 107
	iarray  goto 48
	lval  goto 39
	array  goto 58
	ANAME  goto 104
	XYI  goto 73
	decls  goto 30
	glob  goto 40

state 120
	sstmnt :  RETURN expr.; 
	expr :  expr.? expr : expr 
	expr :  expr.+ expr 
	expr :  expr.- expr 
	expr :  expr.* expr 
	expr :  expr./ expr 
	expr :  expr.% expr 
	expr :  expr.^ expr 
	expr :  expr.POW expr 
	expr :  expr.GT expr 
	expr :  expr.GE expr 
	expr :  expr.LT expr 
	expr :  expr.LE expr 
	expr :  expr.EQ expr 
	expr :  expr.NE expr 
	expr :  expr.ANDAND expr 
	expr :  expr.OROR expr 
	expr :  expr.OR expr 
	expr :  expr.AND expr 
	expr :  expr.LSH expr 
	expr :  expr.RSH expr 

	?  shift 171
	;  shift 170
	OROR  shift 186
	ANDAND  shift 185
	OR  shift 187
	^  shift 177
	AND  shift 188
	EQ  shift 183
	NE  shift 184
	GT  shift 179
	GE  shift 180
	LT  shift 181
	LE  shift 182
	LSH  shift 189
	RSH  shift 190
	+  shift 172
	-  shift 173
	*  shift 174
	/  shift 175
	%  shift 176
	POW  shift 178
	.  error


state 121
	expr :  rval.    (145)

	.  reduce 145 (src line 264)


state 122
	expr :  assign.    (146)

	.  reduce 146 (src line 265)


state 123
	expr :  (.expr ) 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 191
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 124
	expr :  [.elist ] 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	elist  goto 192
	expr  goto 193
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 125
	expr :  VAL.    (149)

	.  reduce 149 (src line 268)


state 126
	expr :  STRING.    (150)

	.  reduce 150 (src line 269)


state 127
	expr :  -.expr 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 194
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 128
	expr :  ~.expr 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 195
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 129
	expr :  NOT.expr 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 196
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 130
	assign :  lval.POST 
	assign :  lval.OPER expr 
	assign :  lval.ASSIGN expr 
	rval :  lval.    (129)

	ASSIGN  shift 138
	OPER  shift 137
	POST  shift 136
	.  reduce 129 (src line 234)


state 131
	rval :  fcall.    (130)

	.  reduce 130 (src line 235)


state 132
	chann :  CMAP ASSIGN.expr 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 197
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 133
	chann :  CMAP ..RGB ASSIGN expr 
	chann :  CMAP ..RCHAN ASSIGN expr 
	chann :  CMAP ..GCHAN ASSIGN expr 
	chann :  CMAP ..BCHAN ASSIGN expr 

	RCHAN  shift 199
	GCHAN  shift 200
	BCHAN  shift 201
	RGB  shift 198
	.  error


state 134
	pprog :  OPEN pbody.YoN CLOSE 
	pbody :  pbody.stmnt 
	YoN : .    (50)
	glob : .    (55)

	VARIABLE  shift 109
	AUTO  shift 112
	ARRAY  shift 113
	FCT  shift 110
	BLTN  shift 111
	NAME  shift 108
	STRING  shift 74
	RETURN  shift 36
	OPEN  shift 38
	CLOSE  reduce 50 (src line 135)
	GLOBAL  shift 52
	X  shift 114
	Y  shift 115
	I  shift 116
	OLD  shift 61
	TMP  shift 60
	CMAP  shift 37
	FOR  shift 33
	DO  shift 35
	WHILE  shift 44
	JUMP  shift 105
	IF  shift 43
	;  shift 64
	$  shift 62
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	.  reduce 55 (src line 142)

	stmnt  goto 203
	sstmnt  goto 106
	pprog  goto 103
	assign  goto 29
	ifpre  goto 32
	whpre  goto 34
	fcall  goto 31
	chann  goto 107
	iarray  goto 48
	lval  goto 39
	array  goto 58
	ANAME  goto 104
	XYI  goto 73
	YoN  goto 202
	decls  goto 30
	glob  goto 40

state 135
	pbody :  stmnt.    (71)

	.  reduce 71 (src line 165)


state 136
	assign :  lval POST.    (126)

	.  reduce 126 (src line 230)


state 137
	assign :  lval OPER.expr 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error

	rval  goto 121
	assign  goto 122
	fcall  goto 131
	expr  goto 204
	iarray  goto 48
	lval  goto 130
	array  goto 58

state 138
	assign :  lval ASSIGN.expr 

	VARIABLE  shift 50
	AUTO  shift 51
	ARRAY  shift 59
	FCT  shift 41
	BLTN  shift 42
	NAME  shift 49
	VAL  shift 125
	STRING  shift 126
	X  shift 45
	Y  shift 46
	I  shift 47
	OLD  shift 61
	TMP  shift 60
	-  shift 127
	NOT  shift 129
	$  shift 62
	~  shift 128
	RCHAN  shift 55
	GCHAN  shift 56
	BCHAN  shift 57
	BW  shift 53
	RGB  shift 54
	(  shift 123
	[  shift 124
	.  error
